--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  
 
-  <title>테이블 테스트</title> 
+  <title>index</title> 
 
   <style>
        #navbar-collapse-uarr{
@@ -76,17 +76,17 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="./index.html" title="">
-          <img src="./assets/images/sunghwa_logo.png" class="navbar-logo-img" alt="">
+          <img src="sunghwa_logo.png" class="navbar-logo-img" alt="">
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
         <ul class="nav navbar-nav navbar-center" >
-          <li><a href="./testpage.html" title="" class="active">회사소개</a></li>
-          <li><a href="./productintro.html" title="">제품소개</a></li>
-          <li><a href="./skillintro.html" title="">기술정보</a></li>
-          <li><a href="./skillintro.html" title="">보유장비</a></li>
-          <li><a href="./customercenter.html" title="">고객센터</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/testpage.html" title="" class="active">회사소개</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/productintro.html" title="">제품소개</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/skillintro.html" title="">기술정보</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/skillintro.html" title="">보유장비</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/customercenter.html" title="">고객센터</a></li>
          <!--<li><a href="./components.html" title="">Components</a></li>-->
           <li>
 
@@ -107,7 +107,7 @@
   </colgroup>
 
     <tr>
-    <td colspan="2"><img src="./assets/images/CompanyIntro.png" width="100%"></td>
+    <td colspan="2"><img src="CompanyIntro.png" width="100%"></td>
    </tr>
 
   <tr><td colspan="2"><center>Main None</center></td></tr>
