--- a/testpage.html
+++ b/testpage.html
@@ -17,7 +17,7 @@
 
  
 
-  <title>테이블 테스트</title> 
+  <title>Company Intro</title> 
 
   <style>
        #navbar-collapse-uarr{
@@ -83,18 +83,18 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./index.html" title="">
-          <img src="./assets/images/sunghwa_logo.png" class="navbar-logo-img" alt="">
+        <a class="navbar-brand" href="https://kimdew93.github.io/sunghwa_test/index.html" title="">
+          <img src="sunghwa_logo.png" class="navbar-logo-img" alt="">
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
         <ul class="nav navbar-nav navbar-center" >
-          <li><a href="./testpage.html" title="" class="active">회사소개</a></li>
-          <li><a href="./productintro.html" title="">제품정보</a></li>
-          <li><a href="./skillintro.html" title="">기술정보</a></li>
-          <li><a href="./facilities.html" title="">보유장비</a></li>
-          <li><a href="./customercenter.html" title="">고객센터</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/testpage.html" title="" class="active">회사소개</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/productintro.html" title="">제품정보</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/skillintro.html" title="">기술정보</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test//facilities.html" title="">보유장비</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/customercenter.html" title="">고객센터</a></li>
          <!--<li><a href="./components.html" title="">Components</a></li>-->
           <li>
 
@@ -116,11 +116,11 @@
   </colgroup>
 
   <tr>
-    <td colspan="3"><img src="./assets/images/CompanyIntro.png" width="100%"></td>
+    <td colspan="3"><img src="CompanyIntro.png" width="100%"></td>
   </tr>
 
   <tr>
-    <td colspan="3" align="right" bgcolor=#efefef id="route"><a href="./index.html"><font color="black">HOME</a>>회사소개><strong>인사말</strong>&nbsp;</td>
+    <td colspan="3" align="right" bgcolor=#efefef id="route"><a href="https://kimdew93.github.io/sunghwa_test/index.html"><font color="black">HOME</a>>회사소개><strong>인사말</strong>&nbsp;</td>
   </tr>
 
   <tr>
@@ -129,13 +129,13 @@
         <colgroup>
           <col style="width:300px">
         </colgroup>
-        <tr><td><img src="./assets/images/SideTabTitle.png"></td></tr>
-        <tr><td><a href="./testpage.html"><img src="./assets/images/SideTab_1_1.png"></a></td></tr>
-        <tr><td><a href="./organizationchart.html"><img src="./assets/images/SideTab_2.png"></a></td></tr>
-        <tr><td><a href="./companyhistory.html"><img src="./assets/images/SideTab_3.png"></a></td></tr>
-        <tr><td><a href="./sunghwaload.html"><img src="./assets/images/SideTab_4.png"></a></td></tr>
-         <tr><td><img src="./assets/images/SideTab_Last.png" ></td></tr>
-         <tr><td><img src="./assets/images/SideTab_Last.png" ></td></tr>
+        <tr><td><img src="SideTabTitle.png"></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/testpage.html"><img src="./assets/images/SideTab_1_1.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/organizationchart.html"><img src="./assets/images/SideTab_2.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/companyhistory.html"><img src="./assets/images/SideTab_3.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/sunghwaload.html"><img src="./assets/images/SideTab_4.png"></a></td></tr>
+         <tr><td><img src="SideTab_Last.png" ></td></tr>
+         <tr><td><img src="SideTab_Last.png" ></td></tr>
        </table> 
      </td>
      <td colspan="2" id="rightcontent"> <p><br>
