--- a/testpage.html
+++ b/testpage.html
@@ -130,10 +130,10 @@
           <col style="width:300px">
         </colgroup>
         <tr><td><img src="SideTabTitle.png"></td></tr>
-        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/testpage.html"><img src="./assets/images/SideTab_1_1.png"></a></td></tr>
-        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/organizationchart.html"><img src="./assets/images/SideTab_2.png"></a></td></tr>
-        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/companyhistory.html"><img src="./assets/images/SideTab_3.png"></a></td></tr>
-        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/sunghwaload.html"><img src="./assets/images/SideTab_4.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/testpage.html"><img src="SideTab_1_1.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/organizationchart.html"><img src="SideTab_2.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/companyhistory.html"><img src="SideTab_3.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/sunghwaload.html"><img src="SideTab_4.png"></a></td></tr>
          <tr><td><img src="SideTab_Last.png" ></td></tr>
          <tr><td><img src="SideTab_Last.png" ></td></tr>
        </table> 
