--- a/organizationchart.html
+++ b/organizationchart.html
@@ -139,7 +139,7 @@
        </table> 
      </td>
      <td colspan="2" id="rightcontent"> <p><br>
-               조직도
+               <img src="testimg.png>
             </p></td>
   </tr> 
   <tr></tr>
