--- a/organizationchart.html
+++ b/organizationchart.html
@@ -139,7 +139,7 @@
        </table> 
      </td>
      <td colspan="2" id="rightcontent"> <p><br>
-              <center> <img src="./assets/images/testimg.png"></center>
+              <center> <img src="testimg.png"></center>
             </p></td>
   </tr> 
   <tr></tr>
