--- a/companyhistory.html
+++ b/companyhistory.html
@@ -120,7 +120,7 @@
   </tr>
 
   <tr>
-    <td colspan="3" align="right" bgcolor=#efefef id="route"><a href="https://kimdew93.github.io/sunghwa_test/index.html"><font color="black">HOME</a>>회사소개><strong>인사말</strong>&nbsp;</td>
+    <td colspan="3" align="right" bgcolor=#efefef id="route"><a href="https://kimdew93.github.io/sunghwa_test/index.html"><font color="black">HOME</a>>회사소개><strong></strong>&nbsp;</td>
   </tr>
 
   <tr>
