--- a/sunghwaload.html
+++ b/sunghwaload.html
@@ -17,7 +17,7 @@
 
  
 
-  <title>조직도</title> 
+  <title>Company Intro</title> 
 
   <style>
        #navbar-collapse-uarr{
@@ -83,18 +83,18 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./index.html" title="">
-          <img src="./assets/images/sunghwa_logo.png" class="navbar-logo-img" alt="">
+        <a class="navbar-brand" href="https://kimdew93.github.io/sunghwa_test/index.html" title="">
+          <img src="sunghwa_logo.png" class="navbar-logo-img" alt="">
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
         <ul class="nav navbar-nav navbar-center" >
-          <li><a href="./testpage.html" title="" class="active">회사소개</a></li>
-          <li><a href="./productintro.html" title="">제품정보</a></li>
-          <li><a href="./skillintro.html" title="">기술정보</a></li>
-          <li><a href="./facilities.html" title="">보유장비</a></li>
-          <li><a href="./customercenter.html" title="">고객센터</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/testpage.html" title="" class="active">회사소개</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/productintro.html" title="">제품정보</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/skillintro.html" title="">기술정보</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test//facilities.html" title="">보유장비</a></li>
+          <li><a href="https://kimdew93.github.io/sunghwa_test/customercenter.html" title="">고객센터</a></li>
          <!--<li><a href="./components.html" title="">Components</a></li>-->
           <li>
 
@@ -116,11 +116,11 @@
   </colgroup>
 
   <tr>
-    <td colspan="3"><img src="./assets/images/CompanyIntro.png" width="100%"></td>
+    <td colspan="3"><img src="CompanyIntro.png" width="100%"></td>
   </tr>
 
   <tr>
-    <td colspan="3" align="right" bgcolor=#efefef id="route"><a href="./index.html"><font color="black">HOME</a>>회사소개><strong>인사말</strong>&nbsp;</td>
+    <td colspan="3" align="right" bgcolor=#efefef id="route"><a href="https://kimdew93.github.io/sunghwa_test/index.html"><font color="black">HOME</a>>회사소개><strong>오시는 길</strong>&nbsp;</td>
   </tr>
 
   <tr>
@@ -129,17 +129,17 @@
         <colgroup>
           <col style="width:300px">
         </colgroup>
-        <tr><td><img src="./assets/images/SideTabTitle.png"></td></tr>
-        <tr><td><a href="./testpage.html"><img src="./assets/images/SideTab_1.png"></a></td></tr>
-        <tr><td><a href="./organizationchart.html"><img src="./assets/images/SideTab_2.png"></a></td></tr>
-        <tr><td><a href="./companyhistory.html"><img src="./assets/images/SideTab_3.png"></a></td></tr>
-        <tr><td><a href="./sunghwaload.html"><img src="./assets/images/SideTab_4_1.png"></a></td></tr>
-         <tr><td><img src="./assets/images/SideTab_Last.png" ></td></tr>
-         <tr><td><img src="./assets/images/SideTab_Last.png" ></td></tr>
+        <tr><td><img src="SideTabTitle.png"></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/testpage.html"><img src="SideTab_1.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/organizationchart.html"><img src="SideTab_2.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/companyhistory.html"><img src="SideTab_3.png"></a></td></tr>
+        <tr><td><a href="https://kimdew93.github.io/sunghwa_test/sunghwaload.html"><img src="SideTab_4_1.png"></a></td></tr>
+         <tr><td><img src="SideTab_Last.png" ></td></tr>
+         <tr><td><img src="SideTab_Last.png" ></td></tr>
        </table> 
      </td>
      <td colspan="2" id="rightcontent"> <p><br>
-               <center> <table cellpadding="0" cellspacing="0" width="462"> <tr> <td style="border:1px solid #cecece;"><a href="https://map.naver.com/?searchCoord=d4eef67df0ca77fa338a13409a7b3cd7e7fb3ff2642e017c5f7e3aa2776e14a6&query=7ISx7ZmU7IKw7LKg&tab=1&lng=b6737095bae187fff825a31813e99766&mapMode=0&mpx=30d657e97c5b4caa22c182acb7c4fcfbf5cfd4dce5af6f1f7506f013e5622e8804e853f53f4f2acfd7c003305950c207a2f9772771f6aed0a94c4f9c221ec9f8&lat=b03f071259e57baca0079942fe79e9f2&dlevel=12&enc=b64&menu=location" target="_blank"><img src="http://prt.map.naver.com/mashupmap/print?key=p1553570467496_307294830" width="460" height="340" alt="지도 크게 보기" title="지도 크게 보기" border="0" style="vertical-align:top;"/></a></td> </tr> <tr> <td> <table cellpadding="0" cellspacing="0" width="100%"> <tr> <td height="30" bgcolor="#f9f9f9" align="left" style="padding-left:9px; border-left:1px solid #cecece; border-bottom:1px solid #cecece;"> <span style="font-family: tahoma; font-size: 11px; color:#666;">2019.3.26</span>&nbsp;<span style="font-size: 11px; color:#e5e5e5;">|</span>&nbsp;<a style="font-family: dotum,sans-serif; font-size: 11px; color:#666; text-decoration: none; letter-spacing: -1px;" href="https://map.naver.com/?searchCoord=d4eef67df0ca77fa338a13409a7b3cd7e7fb3ff2642e017c5f7e3aa2776e14a6&query=7ISx7ZmU7IKw7LKg&tab=1&lng=b6737095bae187fff825a31813e99766&mapMode=0&mpx=30d657e97c5b4caa22c182acb7c4fcfbf5cfd4dce5af6f1f7506f013e5622e8804e853f53f4f2acfd7c003305950c207a2f9772771f6aed0a94c4f9c221ec9f8&lat=b03f071259e57baca0079942fe79e9f2&dlevel=12&enc=b64&menu=location" target="_blank">지도 크게 보기</a> </td> <td width="98" bgcolor="#f9f9f9" align="right" style="text-align:right; padding-right:9px; border-right:1px solid #cecece; border-bottom:1px solid #cecece;"> <span style="float:right;"><span style="font-size:9px; font-family:Verdana, sans-serif; color:#444;">&copy;&nbsp;</span>&nbsp;<a style="font-family:tahoma; font-size:9px; font-weight:bold; color:#2db400; text-decoration:none;" href="http://www.nhncorp.com" target="_blank">NAVER Corp.</a></span> </td> </tr> </table> </td> </tr> </table>
+                <center> <table cellpadding="0" cellspacing="0" width="462"> <tr> <td style="border:1px solid #cecece;"><a href="https://map.naver.com/?searchCoord=d4eef67df0ca77fa338a13409a7b3cd7e7fb3ff2642e017c5f7e3aa2776e14a6&query=7ISx7ZmU7IKw7LKg&tab=1&lng=b6737095bae187fff825a31813e99766&mapMode=0&mpx=30d657e97c5b4caa22c182acb7c4fcfbf5cfd4dce5af6f1f7506f013e5622e8804e853f53f4f2acfd7c003305950c207a2f9772771f6aed0a94c4f9c221ec9f8&lat=b03f071259e57baca0079942fe79e9f2&dlevel=12&enc=b64&menu=location" target="_blank"><img src="http://prt.map.naver.com/mashupmap/print?key=p1553570467496_307294830" width="460" height="340" alt="지도 크게 보기" title="지도 크게 보기" border="0" style="vertical-align:top;"/></a></td> </tr> <tr> <td> <table cellpadding="0" cellspacing="0" width="100%"> <tr> <td height="30" bgcolor="#f9f9f9" align="left" style="padding-left:9px; border-left:1px solid #cecece; border-bottom:1px solid #cecece;"> <span style="font-family: tahoma; font-size: 11px; color:#666;">2019.3.26</span>&nbsp;<span style="font-size: 11px; color:#e5e5e5;">|</span>&nbsp;<a style="font-family: dotum,sans-serif; font-size: 11px; color:#666; text-decoration: none; letter-spacing: -1px;" href="https://map.naver.com/?searchCoord=d4eef67df0ca77fa338a13409a7b3cd7e7fb3ff2642e017c5f7e3aa2776e14a6&query=7ISx7ZmU7IKw7LKg&tab=1&lng=b6737095bae187fff825a31813e99766&mapMode=0&mpx=30d657e97c5b4caa22c182acb7c4fcfbf5cfd4dce5af6f1f7506f013e5622e8804e853f53f4f2acfd7c003305950c207a2f9772771f6aed0a94c4f9c221ec9f8&lat=b03f071259e57baca0079942fe79e9f2&dlevel=12&enc=b64&menu=location" target="_blank">지도 크게 보기</a> </td> <td width="98" bgcolor="#f9f9f9" align="right" style="text-align:right; padding-right:9px; border-right:1px solid #cecece; border-bottom:1px solid #cecece;"> <span style="float:right;"><span style="font-size:9px; font-family:Verdana, sans-serif; color:#444;">&copy;&nbsp;</span>&nbsp;<a style="font-family:tahoma; font-size:9px; font-weight:bold; color:#2db400; text-decoration:none;" href="http://www.nhncorp.com" target="_blank">NAVER Corp.</a></span> </td> </tr> </table> </td> </tr> </table>
             </p></td>
             </p></td>
   </tr> 
