--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     #footercolor{
       background-color: #efefef;
     }
+    #navbar-collapse-uarr{
+      font-size:13pt;
+    }
   </style>  
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
